<resources>
    <string name="app_name">AstroWeather</string>

    <string name="sun">- SUN -</string>
    <string name="moon">- MOON -</string>
    <string name="basic_info">- BASIC -</string>
    <string name="extended_info">- EXTENDED -</string>
    <string name="forecast">- FORECAST -</string>

    <string name="sunrise_time">Sunrise Time</string>
    <string name="sunset_time">Sunset Time</string>
    <string name="sunrise_azimuth">Sunrise Azimuth</string>
    <string name="sunset_azimuth">Sunset Azimuth</string>
    <string name="dusk">Dusk</string>
    <string name="dawn">Dawn</string>

    <string name="moonrise_time">Moonrise Time</string>
    <string name="moonset_time">Moonset Time</string>
    <string name="nearest_new_moon">Nearest New Moon</string>
    <string name="nearest_full_moon">Nearest Full Moon</string>
    <string name="phase_of_the_moon">Phase of the Moon</string>
    <string name="synodic_month_day">Synodic Month Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>